--- a/sequencing_coverage_plot/render/templates/coverage_bar_chart.html
+++ b/sequencing_coverage_plot/render/templates/coverage_bar_chart.html
@@ -3,10 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ chart.page_title }}</title>
+    <title> {{ chart.page_title }} </title>
     {{ macro.render_chart_dependencies(chart) }}
 </head>
 <body>
+    <h1>Coverage Plot</h1>
     {{ macro.render_chart_content(chart) }}
 </body>
 </html>
