first coverage plot of project

--- a/sequencing_coverage_plot/render/templates/coverage_bar_chart.html
+++ b/sequencing_coverage_plot/render/templates/coverage_bar_chart.html
@@ -7,7 +7,7 @@
     {{ macro.render_chart_dependencies(chart) }}
 </head>
 <body>
-    <h1>Coverage Plot</h1>
+    <h1>Interactive Coverage Plot</h1>
     {{ macro.render_chart_content(chart) }}
 </body>
 </html>
